# personal_knowledge_system

./: AGENTS.md
python_study/: .gitignore  README.md  pyproject.toml  test_pyopenssl.py  uv.toml
python_study/advance_study/logging/: __init__.py  logging_README.md
python_study/advance_study/os/: __init__.py  os文章.md  test_os01.py
python_study/advance_study/pandas/: 1. 初始Pandas.py  2. 灵活的Pandas索引.py  __init__.py  my_dataframe.py  my_series.py  pandas-索引.ipynb  pandas学习文章.md  sites.json
python_study/advance_study/pytest/: pytest测试框架.md
python_study/advance_study/re/: my_re01.py  my_re02.py  study.md
python_study/advance_study/requests/: __init__.py  request_test.py  request_test02.py
python_study/advance_study/进程_线程_协程/: coroutine_study.py  协程.md  线程.md  进程.md
python_study/basic_study/: __init__.py  basic.md  basic.py
python_study/basic_study/database/: __init__.py  centos7安装mysql.md  conn_mysql.py  操作mysql.md
python_study/basic_study/datetime_and_time/: __init__.py  datetime_and_time.py
python_study/basic_study/decorator/: __init__.py  decorator装饰器.md  test_decorator01.py  test_decorator02.py
python_study/basic_study/exception/: __init__.py  try_except.py  错误和异常.md
python_study/basic_study/file/: __init__.py  file01.py
python_study/basic_study/function/: __init__.py
python_study/basic_study/iterator/: __init__.py  iterator迭代器.md
python_study/basic_study/module_and_package/: mudole01.py  use_module01.py  use_pag01.py
python_study/basic_study/namespace_and_scope/: __init__.py  命名空间和作用域.md
python_study/basic_study/oop/: __init__.py  抽象类.py  (+8 more)
(+106 files in other folders)
