[project]
name = "my-projects"
version = "0.1.0"
description = "python学习记录"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.31.0",
    "scrapy>=2.11.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pymysql>=1.1.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "pyopenssl>=23.2.0",
    "pytest>=9.0.1",
]

[tool.uv]
virtualenv = "D:\\envs\\py313env"
